# alitra

./: .gitignore  README.md  azure-pipelines-publish.yml  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: compile_python_requirements_and_create_pr.yml  compile_requirements.yml  pythonpackage.yml  pythonpublish.yml  test_and_lint_python_package.yml
examples/: example_manual_alignment.py
src/alitra/: __init__.py  align_frames.py  alignment.py  frame_dataclasses.py  frame_transform.py  transform.py
src/alitra/convert/: __init__.py  euler.py  quaternion.py
src/alitra/models/: __init__.py  bounds.py  frame.py  map.py  map_config.py  orientation.py  pose.py  position.py  translation.py
tests/: conftest.py  test_align_frames.py  test_alignment.py  test_example.py  test_frame_dataclasses.py  test_frame_transform.py  test_transform.py
tests/convert/: test_euler.py  test_quaternion.py
tests/models/: test_bounds.py  test_frame.py  test_map.py  test_map_config.py  test_orientation.py  test_pose.py  test_position.py  test_translation.py
tests/test_data/: test_map_asset.json  test_map_bounds.json  test_map_robot.json  test_mapalignment.json
tests/test_data/test_map_config/: test_map_config_bounds.json
