[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "alitra"
authors = [{ name = "Equinor ASA", email = "fg_robots_dev@equinor.com" }]
description = "Simple alignment and transformation between coordinate frames"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["dacite", "scipy", "numpy"]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/equinor/alitra.git"

[project.optional-dependencies]
dev = ["black", "mypy", "pip-tools", "pre-commit", "pytest"]

[tool.setuptools_scm]
# This section is empty but required for dynamic versioning.

[tool.mypy]
no_strict_optional = true
no_site_packages = true
ignore_missing_imports = true
exclude = ["build"]
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true

[tool.black]
line_length = 88
